--- a/salary/index.html
+++ b/salary/index.html
@@ -3,9 +3,15 @@
     <title>SALARY</title>
     <link rel="stylesheet" href="styles.css"/>
 </head>
+<h1>Dont complain of your salary work harder.</h1>
+<p>KRA WANATUMALIZA</p>
+
+<div class="salary"/>
+<img src="./images/salary2.jpeg">
+</div>
 <body>
 <script>
-    
+
 </script>
 </body>
 </html>
